--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "\"art vandelay\".capitalizeall() # \"ART VANDELAY\""
+    "\"art vandelay\".uppercase( # \"ART VANDELAY\""
    ]
   },
   {
