--- a/index.ipynb
+++ b/index.ipynb
@@ -80,23 +80,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'capitalizeall'",
+     "evalue": "'str' object has no attribute 'uppercase'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-9d612ada07af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"art vandelay\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcapitalizeall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# \"ART VANDELAY\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'capitalizeall'"
+      "\u001b[0;32m<ipython-input-4-9e5a83756f2c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m\"art vandelay\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muppercase\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# \"ART VANDELAY\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'uppercase'"
      ]
     }
    ],
    "source": [
-    "\"art vandelay\".uppercase( # \"ART VANDELAY\""
+    "\"art vandelay\".uppercase() # \"ART VANDELAY\""
    ]
   },
   {
